# dashboards

./: .behaverc  .dockerignore  .env.development  .env.example  .eslintrc.js  .gitignore  .gitleaks.toml  .gitleaksignore  .htmlhintrc  .pre-commit-config.yaml  .prettierrc  .stylelintrc  Dockerfile  IoTSphere-BDD-Analysis.md  Makefile  README.md  TEST_PIPELINE.md  add_compatible_water_heaters.py  add_health_check.py  add_production_water_heaters.py  add_readings_fix.py  add_readings_to_original_water_heaters.py  add_sample_data.py  add_sample_water_heaters.py  add_test_machine.py  add_test_rule.py  archive_deprecated_files.sh  archive_pre_cdc_files.sh  azure-pipelines.yml  bundle.js  check_mongodb.py  check_step_definitions.js  common_steps.txt  comprehensive_data_validation.py  configure_model_alerts.py  configure_water_heater_defaults.py  create_clean_db.py  create_water_heater_shadows.py  cypress.config.js  data_flow_diagnostic.py  (+105 more)
.venv311/: pyvenv.cfg
app/: __init__.py
archive/: data_source_fix.py  debug_alerts_query.py  debug_db_access.py  diagnose_alerts.py  fix_alerts_api.py  fix_alerts_frontend.py  fix_model_metrics_adapter.py  fix_models_dropdown.py  fixed_main.py  generate_alert_event.py  insert_alert_event.py  populate_metrics_for_models.py  run_with_mongodb.py  set_model_health.py  start_with_mongodb.py  test_alerts_db.py  test_data_access_integration.py  test_data_source.py  test_database_to_ui_flow.py  test_frontend_alerts.py  test_model_monitoring.py  test_repositories.py  test_water_heater_config.py  update_health_status_format.py
archives/: common_steps.js.bak  realtime_test_adapter.js  realtime_updates_steps.js.bak  realtime_updates_steps.js.old  shadow_document_steps.js.bak
config/: config.development.yaml  config.production.yaml  config.testing.yaml  config.yaml  database.yaml  development.yaml  production.yaml
(+1107 files in other folders)
